<resources>
    <string name="app_name">Filmania</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="popular">Popular</string>
    <string name="top_rated">Top Rated</string>
    <string name="poster_of_the_movie">Poster of the movie</string>

    <!--    dynamic strings to set the attributes in details fragments-->

    <string name="director"><b>Director:</b> %1$s</string>
    <string name="screenplay"><b>Screenplay:</b>%1$s</string>
    <string name="set_rating"><b>%1$s</b>/10</string>
    <string name="movieRuntime"> %1$sh %2$sm </string>

    <string name="episodeCount">Episodes : %1$d </string>
    <string name="seasonCount">Seasons : %1$d </string>
    <string name="firstAirDate">First Air Date: %1$s </string>
    <string name="lastAirDate">Last Air Date : %1$s </string>
    <string name="episodeRunTime">Runtime : %1$d minutes</string>


    <string name="bookmarks">BookMarks</string>
    <string name="search">Search</string>
    <string name="movies">Movies</string>
    <string name="tvshows">Tv Shows</string>
    <string name="clear_all">Clear All</string>
    <string name="favorites">Favorites</string>
    <string name="details">Details</string>
    <string name="images">Images</string>
    <string name="add_to_favorites">Add to Favorites</string>
    <string name="added_to_favorites">Added to Favorites</string>
    <string name="cast">Cast</string>
    <string name="similar_movies">Similar Movies</string>
    <string name="loading">Loading…</string>
    <string name="similar_shows">Similar Shows</string>
    <string name="about">About</string>
    <string name="age">Age</string>
    <string name="born_on">Born on</string>
    <string name="from">From</string>
    <string name="biography">Biography</string>
    <string name="famous_movies_amp_shows"><![CDATA[Famous Movies & SHows]]></string>
    <string name="popular_people_on_tmdb">Popular People on TMDB</string>
    <string name="people">People</string>
    <string name="your_favorites_will_appear_here">Your favorites will appear here…!!!</string>
    <string name="upcoming">Upcoming</string>
    <string name="see_all"><u>See all</u></string>
    <string name="trending">Trending</string>
    <string name="trending_movies">Trending Movies</string>
    <string name="trending_shows">Trending Shows</string>
    <string name="this_week">(this week)</string>
    <string name="popular_movies">Popular Movies</string>
    <string name="top_rated_movies">Top Rated Movies</string>
    <string name="home">Home</string>
    <string name="shows">Shows</string>
    <string name="no_videos">Sorry!!! \n We currently don\'t have any videos.</string>

    <string name="get_thumbnail">https://i.ytimg.com/vi/%1$s/0.jpg</string>
    <string name="videos">Videos</string>

    <string name="official">Official</string>
    <string name="unofficial">Unofficial</string>

    <string name="loading_video">Loading Video…</string>
    <string name="select_an_app">Select an app</string>

    <string name="no_biography">No Biography available.</string>

    <string name="set_text">%1$s</string>

    <string name="popular_shows">Popular Shows</string>
    <string name="top_rated_shows">Top Rated Shows</string>
    <string name="no_network_connection">No Network Connection…!!!</string>
    <string name="on_tmdb">(on TMDB)</string>
    <string name="popular_people">Popular People</string>
    <string name="version_1_0_0">Version 1.0.0</string>
    <string name="creator_name">© 2021 Kashif Masood</string>
    <string name="about_app">This app was created using TMDB API, but it is not endorsed or authenticated by TMDB.</string>
</resources>